...
            android:id="@+id/textLocationSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <EditText
            android:id="@+id/editLocationQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/buttonUseCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationMatchesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            tools:itemCount="5" />

        <Space
...
            android:id="@+id/textSelectedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/col_on_secondary"/>

        <TextView
            android:id="@+id/textSelectedLocationFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:ignore="SmallSp"
            android:textColor="@color/col_on_secondary"/>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/buttonSetGeolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_geolocation"
            app:cornerRadius="50dp" />
    </LinearLayout>
</FrameLayout>
