...
    <string name="search">Search:</string>
    <string name="use_current_location">Use current location</string>
    <string name="result">Result:</string>
    <string name="set_geolocation">Set geolocation</string>
    <string name="use_geolocation">Use geolocation</string>

    <string name="empty_event_name">Please specify a name for your event.</string>
    <string name="event_name_too_long">The event name is too long. Provide a name no longer than %d characters.</string>
    <string name="end_before_start">Invalid: The event ends before it even starts.</string>
    <string name="event_time_too_long">The event cannot last longer than a day. Specify a recurrence if it should last longer than a day.</string>
    <string name="location_name_too_long">The custom location name is too long. Provide a name no longer than %d characters.</string>
    <string name="recurrence_end_too_soon">The recurrence end time is too soon. It should be at least the event start time.</string>
    <string name="no_geoloc_set">The geolocation must be set.</string>

    <string name="my_location_button_desc">my_location_button</string>

    <string name="current_date">CurrentDate</string>
...
    <string name="shrek_right">Our lord and savior dabbing to the right</string>
    <string name="repeat_event">Repeat event ?</string>
    <string name="repeat_every">Repeat every:</string>
    <string name="amount">Amount</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

...
